# rust-server-sdk

./: .release-please-manifest.json  .sdk_metadata.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  coverage.sh  release-please-config.json
.circleci/: config.yml
.github/actions/build-docs/: action.yml
.github/actions/ci/: action.yml
.github/actions/contract-tests/: action.yml
.github/actions/publish/: action.yml
.github/workflows/: check-rust-versions.yml  ci.yml  manual-publish.yml  release-please.yml
.ldrelease/: build.sh  config.yml  publish.sh  update-version.sh
contract-tests/: Cargo.toml  README.md  testharness-suppressions.txt
contract-tests/src/: client_entity.rs  command_params.rs  main.rs
examples/: demo.rs  hack.rs  print_flags.rs  progress.rs  progress_ncurses.rs
launchdarkly-server-sdk/: CHANGELOG.md  Cargo.toml  README.md
launchdarkly-server-sdk/examples/: connector.rs  custom_transport.rs  print_flags.rs  progress.rs  progress_ncurses.rs
launchdarkly-server-sdk/src/: client.rs  config.rs  data_source.rs  data_source_builders.rs  data_store.rs  evaluation.rs  feature_requester.rs  feature_requester_builders.rs  https_connector.rs  lib.rs  reqwest.rs  sampler.rs  service_endpoints.rs  test_common.rs  test_data.rs  transport.rs  transport_hyper.rs  version.rs
launchdarkly-server-sdk/src/events/: dispatcher.rs  event.rs  mod.rs  processor.rs  processor_builders.rs  sender.rs
launchdarkly-server-sdk/src/migrations/: migrator.rs  mod.rs  tracker.rs
launchdarkly-server-sdk/src/stores/: mod.rs  persistent_store.rs  persistent_store_builders.rs  persistent_store_cache.rs  persistent_store_wrapper.rs  store.rs  store_builders.rs  store_types.rs
launchdarkly-server-sdk/test-data/: large-polling-payload.json
src/: client.rs  config.rs  data_source.rs  data_source_builders.rs  data_store.rs  data_store_builders.rs  eval.rs  evaluation.rs  event_processor.rs  event_processor_builders.rs  event_sink.rs  events.rs  eventsource.rs  feature_requester.rs  feature_requester_builders.rs  lib.rs  service_endpoints.rs  store.rs  test_common.rs  update_processor.rs  users.rs  version.rs
src/events/: dispatcher.rs  event.rs  processor.rs  processor_builders.rs  sender.rs
