[package]
name = "launchdarkly-server-sdk"
version = "0.1.0"
authors = ["Sam Stokes <sstokes@launchdarkly.com>"]
edition = "2018"

[dependencies]
eventsource-client = "0.5.0"
futures = "0.1.25"
http = ">= 0.1.18"
lazy_static = "1.4.0"
log = "0.4.6"
lru = { version = "0.5.3", default_features = false }
reqwest = "0.9.11"
rust-server-sdk-evaluation = { git = "https://github.com/launchdarkly/rust-server-sdk-evaluation", branch = "master" }
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
thiserror = "1.0"
tokio = "0.1.16"

[dev-dependencies]
maplit = "1.0.1"
env_logger = "0.7.1"
serde_json = { version = "1.0.39", features = ["preserve_order"] } # for deterministic JSON testing
spectral = "0.6.0"
cursive = "0.11"
tokio-executor = "0.1.6"

[build-dependencies]
built = "0.4"
