[package]
name = "launchdarkly-server-sdk"
version = "0.1.0"
authors = ["Sam Stokes <sstokes@launchdarkly.com>"]
edition = "2018"

[dependencies]
eventsource-client = "0.6.0"
futures = "0.3.12"
lazy_static = "1.4.0"
log = "0.4.14"
lru = { version = "0.5.3", default_features = false }
reqwest = "0.9.11"
rust-server-sdk-evaluation = { git = "https://github.com/launchdarkly/rust-server-sdk-evaluation", branch = "master" }
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
thiserror = "1.0"
tokio = { version = "1.2.0", features = ["rt-multi-thread"] }

[dev-dependencies]
maplit = "1.0.1"
env_logger = "0.7.1"
serde_json = { version = "1.0.39", features = ["preserve_order"] } # for deterministic JSON testing
spectral = "0.6.0"
cursive = "0.11"
tokio = { version = "1.2.0", features = ["macros", "time"] }
test-case = "1.2.0"

[build-dependencies]
built = "0.4"
