[package]
name = "launchdarkly-server-sdk"
version = "0.1.0"
authors = ["Sam Stokes <sstokes@launchdarkly.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.19"
crossbeam-channel = "0.5.1"
data-encoding = "2.3.2"
eventsource-client = "0.6.0"
futures = "0.3.12"
lazy_static = "1.4.0"
log = "0.4.14"
lru = { version = "0.5.3", default_features = false }
reqwest = "0.9.11"
ring = "0.16.20"
launchdarkly-server-sdk-evaluation = { git = "https://github.com/launchdarkly/rust-server-sdk-evaluation-private", branch = "master" }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = { version = "1.0.73", features = ["float_roundtrip"] }
thiserror = "1.0"
tokio = { version = "1.2.0", features = ["rt-multi-thread"] }
threadpool = "1.8.1"

[dev-dependencies]
maplit = "1.0.1"
env_logger = "0.7.1"
serde_json = { version = "1.0.73", features = ["preserve_order"] } # for deterministic JSON testing
spectral = "0.6.0"
cursive = "0.11"
tokio = { version = "1.2.0", features = ["macros", "time"] }
test-case = "1.2.0"
mockito = "0.30.0"

[build-dependencies]
built = "0.4"
