[package]
name = "contract-tests"
version = "0.1.0"
edition = "2021"
rust-version = "1.74.0"  # MSRV
license = "Apache-2.0"

[dependencies]
actix = "0.13.0"
actix-web = "4.2.1"
env_logger = "0.10.0"
log = "0.4.14"
launchdarkly-server-sdk = { path = "../launchdarkly-server-sdk/", default-features = false}
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
futures = "0.3.12"
hyper = { version = "0.14.19", features = ["client"] }
hyper-rustls = { version = "0.24.1" , optional = true, features = ["http2"]}
hyper-tls = { version = "0.5.0", optional = true }

[features]
default = ["rustls"]
rustls = ["hyper-rustls/http1", "hyper-rustls/http2", "launchdarkly-server-sdk/rustls"]
tls = ["hyper-tls"]
