[package]
name = "contract-tests"
version = "0.1.0"
edition = "2021"
rust-version = "1.92.0"  # MSRV
license = "Apache-2.0"

[dependencies]
actix = "0.13.0"
actix-web = "4.2.1"
env_logger = "0.10.0"
eventsource-client = { version = "0.17.0" }
launchdarkly-sdk-transport = { version = "0.1.0" }
log = "0.4.14"
launchdarkly-server-sdk = { path = "../launchdarkly-server-sdk/", default-features = false, features = ["event-compression"]}
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
futures = "0.3.12"
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2", "tokio"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "ring"], optional = true }
hyper-tls = { version = "0.6.0", optional = true }
reqwest = { version = "0.12.4", features = ["default", "blocking", "json"] }
async-mutex = "1.4.0"

[features]
default = ["hyper", "crypto-aws-lc-rs"]

crypto-aws-lc-rs = ["launchdarkly-server-sdk/crypto-aws-lc-rs"]
crypto-openssl = ["launchdarkly-server-sdk/crypto-openssl"]

hyper = [
    "launchdarkly-sdk-transport/hyper",
    "eventsource-client/hyper"
]
hyper-rustls-native-roots = [
    "hyper",
    "dep:hyper-rustls",
    "launchdarkly-sdk-transport/hyper-rustls-native-roots",
    "eventsource-client/hyper-rustls-native-roots"
]
hyper-rustls-webpki-roots = [
    "hyper",
    "dep:hyper-rustls",
    "launchdarkly-sdk-transport/hyper-rustls-webpki-roots",
    "eventsource-client/hyper-rustls-webpki-roots"
]
native-tls = [
    "hyper",
    "dep:hyper-tls",
    "launchdarkly-sdk-transport/native-tls",
    "eventsource-client/native-tls"
]
