[package]
name = "launchdarkly-server-sdk"
description = "LaunchDarkly Server-Side SDK"
version = "2.1.0"
authors = ["LaunchDarkly"]
edition = "2021"
# TODO: When you change this to 1.76+, remove the explicit triomphe dependency
# below.
rust-version = "1.74.0"  # MSRV
license = "Apache-2.0"
homepage = "https://docs.launchdarkly.com/sdk/server-side/rust"
repository = "https://github.com/launchdarkly/rust-server-sdk"
keywords = ["launchdarkly", "launchdarkly-sdk", "feature-flags", "feature-toggles"]
exclude = [
    "coverage.sh"
]

[dependencies]
chrono = "0.4.19"
crossbeam-channel = "0.5.1"
data-encoding = "2.3.2"
eventsource-client = { version = "0.12.2", default-features = false }
futures = "0.3.12"
lazy_static = "1.4.0"
log = "0.4.14"
lru = { version = "0.12.0", default-features = false }
ring = "0.17.5"
launchdarkly-server-sdk-evaluation = { git = "https://github.com/launchdarkly/rust-server-sdk-evaluation", branch = "feat/migrations" }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = { version = "1.0.73", features = ["float_roundtrip"] }
thiserror = "1.0"
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
parking_lot = "0.12.0"
tokio-stream = { version = "0.1.8", features = ["sync"] }
moka = { version = "0.12.1", features = ["sync"] }
# NOTE: This dependency is only here to deal with a rustc compliation issue.
# Once we move to rustc 1.76, we should be able to remove this explicit
# dependency.
triomphe = { version = "<=0.1.10" }
uuid = {version = "1.2.2", features = ["v4"] }
hyper = { version = "0.14.19", features = ["client", "http1", "http2", "tcp"] }
hyper-rustls = { version = "0.24.1" , optional = true}
rand = "0.8"

[dev-dependencies]
maplit = "1.0.1"
env_logger = "0.10.0"
serde_json = { version = "1.0.73", features = ["preserve_order"] } # for deterministic JSON testing
tokio = { version = "1.17.0", features = ["macros", "time"] }
test-case = "3.2.1"
mockito = "1.2.0"
assert-json-diff = "2.0.2"
async-std = "1.12.0"
reqwest = { version = "0.12.4", features = ["json"] }

[features]
default = ["rustls"]
rustls = ["hyper-rustls/http1", "hyper-rustls/http2", "eventsource-client/rustls"]

[[example]]
name = "print_flags"
required-features = ["rustls"]

[[example]]
name = "progress"
required-features = ["rustls"]
