[package]
name = "launchdarkly-server-sdk"
description = "LaunchDarkly Server-Side SDK"
version = "2.6.1"
authors = ["LaunchDarkly"]
edition = "2021"
rust-version = "1.82.0"  # MSRV
license = "Apache-2.0"
homepage = "https://docs.launchdarkly.com/sdk/server-side/rust"
repository = "https://github.com/launchdarkly/rust-server-sdk"
keywords = ["launchdarkly", "launchdarkly-sdk", "feature-flags", "feature-toggles"]
exclude = [
    "coverage.sh"
]

[package.metadata.docs.rs]
features = ["event-compression"]

[dependencies]
chrono = "0.4.19"
crossbeam-channel = "0.5.1"
data-encoding = "2.3.2"
eventsource-client = { version = "0.14.0", default-features = false }
futures = "0.3.12"
lazy_static = "1.4.0"
log = "0.4.14"
lru = { version = "0.13.0", default-features = false }
launchdarkly-server-sdk-evaluation = "2.0.0"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = { version = "1.0.73", features = ["float_roundtrip"] }
thiserror = "2.0"
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
parking_lot = "0.12.0"
tokio-stream = { version = "0.1.8", features = ["sync"] }
moka = { version = "0.12.1", features = ["sync"] }
uuid = {version = "1.2.2", features = ["v4"] }
hyper = { version = "0.14.19", features = ["client", "http1", "http2", "tcp"] }
hyper-rustls = { version = "0.24.1" , optional = true}
rand = "0.9"
flate2 = { version = "1.0.35", optional = true }
aws-lc-rs = "1.14.1"

[dev-dependencies]
maplit = "1.0.1"
env_logger = "0.10.0"
serde_json = { version = "1.0.73", features = ["preserve_order"] } # for deterministic JSON testing
tokio = { version = "1.17.0", features = ["macros", "time"] }
test-case = "3.2.1"
mockito = "1.2.0"
assert-json-diff = "2.0.2"
async-std = "1.12.0"
reqwest = { version = "0.12.4", features = ["json"] }
testing_logger = "0.1.1"

[features]
default = ["rustls"]
rustls = ["hyper-rustls/http1", "hyper-rustls/http2", "eventsource-client/rustls"]
event-compression = ["flate2"]

[[example]]
name = "print_flags"
required-features = ["rustls"]

[[example]]
name = "progress"
required-features = ["rustls"]
